--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
                 <div class="project-card">
                     <div class="project-image">🧠</div>
                     <div class="project-content">
-                        <h3>Sentiment Analysis with BERT</h3>
-                        <p>Developed an NLP model using BERT transformer to analyze sentiment from customer reviews with 94% accuracy. Deployed as a REST API for real-time predictions.</p>
+                        <h3>MCA Solution - AO orchestraced Zero Touch Pipeline</h3>
+                        <p>The MCA pipeline automates the feature to test case journey using AI agets, eliminating manual bpttlenecks and ensuring consistency,traceability and speed</p>
                         <div class="tech-tags">
                             <span class="tech-tag">Python</span>
                             <span class="tech-tag">BERT</span>
