--- a/index.html
+++ b/index.html
@@ -351,13 +351,16 @@
                 <div class="project-card">
                     <div class="project-image">🧠</div>
                     <div class="project-content">
-                        <h3>MCA Solution - AO orchestraced Zero Touch Pipeline</h3>
-                        <p>The MCA pipeline automates the feature to test case journey using AI agets, eliminating manual bpttlenecks and ensuring consistency,traceability and speed</p>
+                        <h3>MCA Pipeline Automation: AI-Driven Epic Processing for Enterprise Delivery</h3>
+                        <p>MCA Pipeline Automation: AI-Driven Epic Processing for Enterprise Delivery. MCA Solution Overview : AI-Orchestrated Zero-Touch Pipeline.The MCA ( __Multi-Context Protocol __ ) Pipeline is an AI-driven automation layer that transforms the Epic-to-Development-Ready workflow into a near zero-touch process .Key Components (Three Specialized Agents):
+MCA Orchestrator (The Manager): Written in Python, this agent detects new Epics in Jira, validates their status, manages the overall workflow state, and ensures no duplicate processing.Gemini AI Generator (The Brain): Leverages the Google Gemini API to instantly consume the high-level Epic description andGenerate INVEST-Ready User Stories: Breaking down the Epic into actionable, testable stories.
+Create Detailed Acceptance Criteria (AC): Standardizing AC quality using pre-trained templates.Develop Comprehensive Test Cases: Mapping specific test steps directly to the generated AC.Jira Integration Agent (The Executor): Automatically creates the new Stories and Test Cases in Jira, establishing the necessary parent-child and 'Tested By' links for full traceability back to the original Epic.
+Outcome: A seamless, audited, zero-touch flow from __Epic intake __ __ __ __ Story __ __ __ __Test Case __ __ __ Jira .</p>
                         <div class="tech-tags">
                             <span class="tech-tag">Python</span>
-                            <span class="tech-tag">BERT</span>
-                            <span class="tech-tag">NLP</span>
-                            <span class="tech-tag">Flask</span>
+                            <span class="tech-tag">Gemini AI</span>
+                            <span class="tech-tag">MCP</span>
+                            <span class="tech-tag">JIRA Agent</span>
                         </div>
                         <a href="https://github.com" class="project-link">View Project →</a>
                     </div>
