--- a/index.html
+++ b/index.html
@@ -388,12 +388,13 @@
                 <div class="project-card">
                     <div class="project-image">📊</div>
                     <div class="project-content">
-                        <h3>Time Series Forecasting</h3>
-                        <p>Built an LSTM-based model to predict stock prices and market trends with MAPE of 3.2%. Visualized predictions with interactive Plotly dashboards.</p>
+                        <h3>AI-Driven Customer Churn Prediction System</h3>
+                        <p>We have successfully developed and deployed an AI-powered customer churn prediction system that identifies high-risk customers before they leave. This system leverages machine learning to enable proactive retention strategies, potentially reducing customer churn by 20-30% and increasing customer lifetime value significantly.
+Key Achievement: System is production-ready and can process all customer data in minutes, enabling real-time intervention..</p>
                         <div class="tech-tags">
-                            <span class="tech-tag">TensorFlow</span>
-                            <span class="tech-tag">LSTM</span>
-                            <span class="tech-tag">Time Series</span>
+                            <span class="tech-tag">Light GBM</span>
+                            <span class="tech-tag">Phyton</span>
+                            <span class="tech-tag">SQL</span>
                             <span class="tech-tag">Pandas</span>
                         </div>
                         <a href="https://github.com" class="project-link">View Project →</a>
@@ -418,10 +419,9 @@
                         <div class="skill">Python</div>
                         <div class="skill">Machine Learning</div>
                         <div class="skill">Deep Learning</div>
-                        <div class="skill">TensorFlow</div>
-                        <div class="skill">PyTorch</div>
-                        <div class="skill">NLP</div>
-                        <div class="skill">Computer Vision</div>
+                        <div class="skill">Promt Engineering</div>
+                        <div class="skill">Aegetic AI</div>
+                        <div class="skill">AI Tools</div>
                         <div class="skill">Data Analysis</div>
                     </div>
                 </div>
