--- a/index.html
+++ b/index.html
@@ -1,349 +1,345 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Projects Portfolio</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AI Projects Portfolio</title>
+<style>
+    /* --- GLOBAL RESET --- */
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background-color: #f8f9fa;
-        }
+    body {
+        font-family: 'Poppins', 'Segoe UI', sans-serif;
+        background: linear-gradient(180deg, #f8f9fa 0%, #f2f3f7 100%);
+        color: #333;
+        overflow-x: hidden;
+    }
 
-        header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 2rem 0;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
+    /* --- HEADER --- */
+    header {
+        background: linear-gradient(135deg, #667eea, #764ba2);
+        color: white;
+        padding: 1.5rem 0;
+        position: sticky;
+        top: 0;
+        z-index: 100;
+        box-shadow: 0 2px 15px rgba(0,0,0,0.15);
+        backdrop-filter: blur(6px);
+    }
 
-        nav {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 2rem;
-        }
+    nav {
+        max-width: 1200px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 2rem;
+    }
 
-        .logo {
-            font-size: 1.8rem;
-            font-weight: bold;
-            letter-spacing: 1px;
-        }
+    .logo {
+        font-size: 1.8rem;
+        font-weight: bold;
+        background: linear-gradient(90deg, #ffffff, #d1c4ff);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
 
-        nav ul {
-            display: flex;
-            list-style: none;
-            gap: 2rem;
-        }
+    nav ul {
+        display: flex;
+        list-style: none;
+        gap: 2rem;
+    }
 
-        nav a {
-            color: white;
-            text-decoration: none;
-            transition: opacity 0.3s;
-            font-weight: 500;
-        }
+    nav a {
+        color: #fff;
+        text-decoration: none;
+        font-weight: 500;
+        transition: color 0.3s;
+    }
 
-        nav a:hover {
-            opacity: 0.8;
-        }
+    nav a:hover {
+        color: #ffd1ff;
+    }
 
-        .hero {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 6rem 2rem;
-            text-align: center;
-            min-height: 500px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+    /* --- HERO SECTION --- */
+    .hero {
+        position: relative;
+        background: linear-gradient(120deg, #667eea, #764ba2);
+        color: white;
+        text-align: center;
+        padding: 7rem 2rem;
+        overflow: hidden;
+    }
 
-        .hero-content h1 {
-            font-size: 3.5rem;
-            margin-bottom: 1rem;
-            animation: slideInDown 0.8s ease;
-        }
+    /* Floating particles */
+    .hero::before {
+        content: "";
+        position: absolute;
+        top: -50%;
+        left: -50%;
+        width: 200%;
+        height: 200%;
+        background: radial-gradient(circle at 50% 50%, rgba(255,255,255,0.15), transparent 60%);
+        animation: rotate 25s linear infinite;
+        z-index: 0;
+    }
 
-        .hero-content p {
-            font-size: 1.3rem;
-            margin-bottom: 2rem;
-            opacity: 0.95;
-            animation: slideInUp 0.8s ease;
-        }
+    @keyframes rotate {
+        from { transform: rotate(0deg); }
+        to { transform: rotate(360deg); }
+    }
 
-        .cta-button {
-            display: inline-block;
-            background-color: white;
-            color: #667eea;
-            padding: 1rem 2.5rem;
-            border-radius: 50px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: transform 0.3s, box-shadow 0.3s;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-        }
+    .hero-content {
+        position: relative;
+        z-index: 1;
+        animation: fadeZoom 1.2s ease-out;
+    }
 
-        .cta-button:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 6px 20px rgba(0,0,0,0.3);
-        }
+    @keyframes fadeZoom {
+        from { opacity: 0; transform: scale(0.95); }
+        to { opacity: 1; transform: scale(1); }
+    }
 
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 2rem;
-        }
+    .hero-content h1 {
+        font-size: 3.5rem;
+        background: linear-gradient(90deg, #fff, #e0d4ff);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        margin-bottom: 1rem;
+    }
 
-        section {
-            padding: 5rem 0;
-        }
+    .hero-content p {
+        font-size: 1.3rem;
+        opacity: 0.9;
+        margin-bottom: 2rem;
+    }
 
-        section h2 {
-            font-size: 2.5rem;
-            margin-bottom: 3rem;
-            text-align: center;
-            color: #333;
-            position: relative;
-        }
+    .cta-button {
+        background: linear-gradient(90deg, #ffffff, #e5e0ff);
+        color: #5a50e0;
+        padding: 1rem 2.5rem;
+        border-radius: 50px;
+        font-weight: bold;
+        text-decoration: none;
+        box-shadow: 0 0 15px rgba(255,255,255,0.4);
+        transition: all 0.3s ease;
+    }
 
-        section h2::after {
-            content: '';
-            display: block;
-            width: 80px;
-            height: 4px;
-            background: linear-gradient(90deg, #667eea, #764ba2);
-            margin: 1rem auto 0;
-        }
+    .cta-button:hover {
+        transform: scale(1.07);
+        box-shadow: 0 0 25px rgba(255,255,255,0.8);
+    }
 
-        .projects-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            margin-bottom: 3rem;
-        }
+    /* --- SECTION TITLES --- */
+    section h2 {
+        text-align: center;
+        font-size: 2.6rem;
+        background: linear-gradient(90deg, #667eea, #764ba2);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        margin-bottom: 3rem;
+        position: relative;
+    }
 
-        .project-card {
-            background: white;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 2px 15px rgba(0,0,0,0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
+    section h2::after {
+        content: "";
+        display: block;
+        width: 80px;
+        height: 4px;
+        background: linear-gradient(90deg, #667eea, #764ba2);
+        margin: 1rem auto 0;
+        border-radius: 2px;
+    }
 
-        .project-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 25px rgba(0,0,0,0.15);
-        }
+    .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 2rem;
+    }
 
-        .project-image {
-            width: 100%;
-            height: 200px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 3rem;
-        }
+    /* --- PROJECTS --- */
+    .projects-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+        gap: 2rem;
+    }
 
-        .project-content {
-            padding: 2rem;
-        }
+    .project-card {
+        background: #fff;
+        border-radius: 15px;
+        overflow: hidden;
+        box-shadow: 0 5px 25px rgba(0,0,0,0.1);
+        transition: all 0.4s ease;
+        opacity: 0;
+        transform: translateY(20px);
+    }
 
-        .project-content h3 {
-            color: #667eea;
-            margin-bottom: 0.5rem;
-            font-size: 1.5rem;
-        }
+    .project-card:hover {
+        transform: translateY(-10px) scale(1.02);
+        box-shadow: 0 8px 30px rgba(118,75,162,0.3);
+    }
 
-        .project-content p {
-            color: #666;
-            margin-bottom: 1rem;
-            font-size: 0.95rem;
-        }
+    .project-image {
+        height: 200px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 3rem;
+        color: white;
+        background: linear-gradient(135deg, #667eea, #764ba2);
+        transition: background 0.5s ease;
+    }
 
-        .tech-tags {
-            display: flex;
-            gap: 0.5rem;
-            flex-wrap: wrap;
-            margin-bottom: 1rem;
-        }
+    .project-card:hover .project-image {
+        background: linear-gradient(135deg, #764ba2, #667eea);
+    }
 
-        .tech-tag {
-            background-color: #f0f0f0;
-            color: #667eea;
-            padding: 0.4rem 0.8rem;
-            border-radius: 20px;
-            font-size: 0.85rem;
-            font-weight: 500;
-        }
+    .project-content {
+        padding: 1.8rem;
+    }
 
-        .project-link {
-            color: #667eea;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s;
-        }
+    .project-content h3 {
+        color: #667eea;
+        margin-bottom: 0.6rem;
+    }
 
-        .project-link:hover {
-            color: #764ba2;
-        }
+    .project-content p {
+        color: #555;
+        font-size: 0.95rem;
+        margin-bottom: 1rem;
+    }
 
-        .about {
-            background-color: white;
-            padding: 5rem 0;
-        }
+    .tech-tag {
+        background: #f1efff;
+        color: #5a50e0;
+        padding: 0.4rem 0.8rem;
+        border-radius: 20px;
+        margin: 0.2rem;
+        font-size: 0.85rem;
+        display: inline-block;
+    }
 
-        .about-content {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 3rem;
-            align-items: center;
-        }
+    .project-link {
+        text-decoration: none;
+        font-weight: bold;
+        color: #5a50e0;
+        transition: color 0.3s;
+    }
 
-        .about-text h3 {
-            color: #667eea;
-            font-size: 1.3rem;
-            margin-bottom: 1rem;
-        }
+    .project-link:hover {
+        color: #764ba2;
+    }
 
-        .skills {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 1rem;
-            margin-top: 1.5rem;
-        }
+    /* --- ABOUT --- */
+    .about {
+        background-color: #fff;
+        padding: 5rem 0;
+        box-shadow: 0 -3px 10px rgba(0,0,0,0.05);
+    }
 
-        .skill {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 0.7rem 1.5rem;
-            border-radius: 25px;
-            font-weight: 500;
-        }
+    .about-content {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 3rem;
+        align-items: center;
+    }
 
-        .contact {
-            background-color: white;
-            text-align: center;
-        }
+    .skills {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+    }
 
-        .contact-links {
-            display: flex;
-            justify-content: center;
-            gap: 2rem;
-            margin-top: 2rem;
-            flex-wrap: wrap;
-        }
+    .skill {
+        background: linear-gradient(135deg, #667eea, #764ba2);
+        color: #fff;
+        padding: 0.7rem 1.4rem;
+        border-radius: 30px;
+        font-weight: 500;
+        transition: transform 0.3s;
+    }
 
-        .contact-link {
-            display: inline-flex;
-            align-items: center;
-            gap: 0.5rem;
-            padding: 1rem 2rem;
-            background-color: #f8f9fa;
-            border-radius: 10px;
-            text-decoration: none;
-            color: #667eea;
-            font-weight: 500;
-            transition: background-color 0.3s;
-        }
+    .skill:hover {
+        transform: scale(1.1);
+    }
 
-        .contact-link:hover {
-            background-color: #e9ecef;
-        }
+    /* --- CONTACT --- */
+    .contact {
+        text-align: center;
+        background: #fff;
+        padding: 5rem 0;
+    }
 
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 2rem;
-            margin-top: 3rem;
-        }
+    .contact-link {
+        display: inline-block;
+        padding: 1rem 2rem;
+        margin: 0.5rem;
+        background: linear-gradient(90deg, #f0f0ff, #f8f9ff);
+        border-radius: 10px;
+        color: #5a50e0;
+        font-weight: 500;
+        text-decoration: none;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+        transition: all 0.3s;
+    }
 
-        @keyframes slideInDown {
-            from {
-                opacity: 0;
-                transform: translateY(-30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
+    .contact-link:hover {
+        background: linear-gradient(90deg, #667eea, #764ba2);
+        color: white;
+        box-shadow: 0 4px 20px rgba(118,75,162,0.3);
+    }
 
-        @keyframes slideInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
+    /* --- FOOTER --- */
+    footer {
+        background: linear-gradient(135deg, #667eea, #764ba2);
+        color: #fff;
+        text-align: center;
+        padding: 2rem;
+        font-size: 0.95rem;
+        box-shadow: 0 -2px 15px rgba(0,0,0,0.15);
+    }
 
-        @media (max-width: 768px) {
-            nav ul {
-                gap: 1rem;
-                font-size: 0.9rem;
-            }
+    /* --- ANIMATIONS ON SCROLL --- */
+    @keyframes fadeUp {
+        from { opacity: 0; transform: translateY(20px); }
+        to { opacity: 1; transform: translateY(0); }
+    }
 
-            .hero-content h1 {
-                font-size: 2rem;
-            }
+    .show {
+        animation: fadeUp 0.8s ease forwards;
+    }
 
-            .hero-content p {
-                font-size: 1rem;
-            }
-
-            section h2 {
-                font-size: 2rem;
-            }
-
-            .about-content {
-                grid-template-columns: 1fr;
-            }
-
-            .projects-grid {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
+    @media (max-width: 768px) {
+        .hero-content h1 { font-size: 2.4rem; }
+        .about-content { grid-template-columns: 1fr; }
+    }
+</style>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">AI Portfolio</div>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <section class="hero" id="home">
-        <div class="hero-content">
-            <h1>AI Project Showcase</h1>
-            <p>Building intelligent solutions with machine learning and deep learning</p>
-            <a href="#projects" class="cta-button">Explore My Projects</a>
-        </div>
-    </section>
+<header>
+    <nav>
+        <div class="logo">AI Portfolio</div>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
+<section class="hero" id="home">
+    <div class="hero-content">
+        <h1>AI Project Showcase</h1>
+        <p>Building intelligent systems that shape the future</p>
+        <a href="#projects" class="cta-button">🚀 Explore My Projects</a>
+    </div>
+</section>
     <section id="projects">
         <div class="container">
             <h2>Featured Projects</h2>
@@ -442,46 +438,29 @@ Key Achievement: System is production-ready and can process all customer data in
         </div>
     </section>
 
-    <footer>
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
-    </footer>
+   <footer>
+    <p>© 2025 Balarami Reddy — AI & Automation Innovator</p>
+</footer>
 
-    <script>
-        // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'start'
-                    });
-                }
-            });
+<script>
+    // Smooth scroll
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function(e) {
+            e.preventDefault();
+            document.querySelector(this.getAttribute('href')).scrollIntoView({ behavior: 'smooth' });
         });
+    });
 
-        // Add scroll animation for sections
-        const observerOptions = {
-            threshold: 0.1,
-            rootMargin: '0px 0px -100px 0px'
-        };
-
-        const observer = new IntersectionObserver(function(entries) {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.style.opacity = '1';
-                    entry.target.style.transform = 'translateY(0)';
-                }
-            });
-        }, observerOptions);
-
-        document.querySelectorAll('.project-card').forEach(card => {
-            card.style.opacity = '0';
-            card.style.transform = 'translateY(20px)';
-            card.style.transition = 'opacity 0.6s ease, transform 0.6s ease';
-            observer.observe(card);
+    // Fade-up animation on scroll
+    const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add('show');
+            }
         });
-    </script>
+    }, { threshold: 0.2 });
+
+    document.querySelectorAll('.project-card, section').forEach(el => observer.observe(el));
+</script>
 </body>
 </html>
